fix: docs - scrollBar issue (#346)

--- a/docs/src/components/Select.module.scss
+++ b/docs/src/components/Select.module.scss
@@ -111,7 +111,6 @@
 
 .SelectLabel {
   width: 100%;
-  text-align: center;
   padding: 1rem .5rem .2rem;
   font-size: 0.875rem;
   font-weight: 500;
