--- a/docs/styles/global.scss
+++ b/docs/styles/global.scss
@@ -271,6 +271,9 @@ div#__next > div {
 html,
 body {
   font-feature-settings: "cv03", "cv04", "cv11";
+}
+
+html {
   scrollbar-gutter: stable;
 }
 
